# first_robot

./: CMakeLists.txt  package.xml
launch/: config_file.rviz  rviz.launch
rviz/: urdf.rviz
scripts/: joint_controller.py
urdf/: bot.gv  structure.urdf
